--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-netaddr==0.8.0
-numpy==1.24.2
+black==23.9.1
+flake8==6.1.0
+isort==5.12.0
+netaddr==0.9.0
+numpy==1.26.0
 pexpect==4.8.0
-prettytable==3.6.0
-pyeapi==0.8.4
-termcolor==2.2.0
+pyeapi==1.0.2
+rich==13.6.0
+termcolor==2.3.0
